--- a/app/src/main/res/layout/item_market.xml
+++ b/app/src/main/res/layout/item_market.xml
@@ -6,20 +6,23 @@
     android:orientation="horizontal">
 
     <TextView
-        android:layout_weight="1"
         android:id="@+id/tv_trade_pairs_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center" />
 
     <TextView
-        android:layout_weight="1"
         android:id="@+id/tv_latest_price"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center" />
 
     <TextView
-        android:layout_weight="1"
         android:id="@+id/tv_change_rate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center" />
 </LinearLayout>
